--- a/css/ica5.css
+++ b/css/ica5.css
@@ -9,7 +9,7 @@
   body {
     margin: 0;
     background: #ccc;
-    background-image:linear-gradient(rgba(0,0,0,0.4),rgba(255, 255, 255, 0.993) 15% 75%,rgba(0,0,0,0.4)), url(top-image.png), url(bottom-image.png);
+    background-image:linear-gradient(rgba(0,0,0,0.4),rgba(255, 255, 255, 0.993) 15% 75%,rgba(0,0,0,0.4)), url(/img/top-image.png), url(/img/bottom-image.png);
     background-position: center, top, bottom;
     background-repeat: no-repeat;
     background-color: white;
@@ -42,7 +42,7 @@
     padding: 44px 0;
     color: white;
     text-shadow: 1px 1px 1px black;
-    background-image: url("logo.png");
+    background-image: url("/img/logo.png");
     filter: drop-shadow(5px 5px 3px #c5b9b9)
   }
   
