--- a/css/ica6-part2.css
+++ b/css/ica6-part2.css
@@ -1,54 +1,82 @@
 body{
-    background-color: olive;
+    background-color: rgb(238, 238, 230);
 }
 
 
 #flex-parent{
     display:flex;
-    background-color: orangered;
 }
 #flex-parent p{
-    padding:5vw;
+    padding:2vw;
 }
 
+#flex-child1{ 
+    order: 3;
+}
+
+#flex-child2{
+    order: 4;
+}
+
+#flex-child3 {
+    order: 2;
+}
+
+#flex-child4 {
+    order: 1;
+}
 
 #grid-parent{
     display:grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 
 #grid-parent h1{
-    background-color: grey;
-    padding:3vw 5vh;
-    margin:5vw;
+    padding:10vw 8vh;
+    margin:1vw;
+    text-align: center;
+    color:white;
+    background-color: rgb(0, 0, 0);
+    
     
 }
 #no0{
-
+    order: 10;
+    grid-column-start: 2;
 }
+
 #no1{
-
+    order: 1;
 }
+
 #no2{
-
+    order: 2;
 }
+
 #no3{
-
+    order: 3;
 }
+
 #no4{
-
+    order: 4;
 }
+
 #no5{
-
+    order: 5;
 }
+
 #no6{
-
+    order: 6;
 }
+
 #no7{
-
+    order: 7;
 }
+
 #no8{
-
+    order: 8;
 }
-#no9{
 
+#no9{
+    order: 9;
 }
