--- a/css/ica6-part1.css
+++ b/css/ica6-part1.css
@@ -11,16 +11,19 @@ body{
     border-radius:10px;
     background-color: mediumseagreen;
     position:relative;
+    top: 50px;
+    margin: auto;
 }
 #text1{
     left:120%;
     position: relative;
+    top: 250 px;
 }
 
 #box2{
     width: 73vw;
     height: 33vh;
-
+    margin: auto;
     border-style: solid;
     border-radius:3px;
     border-color:purple;
@@ -30,16 +33,24 @@ body{
     background-color: mediumvioletred;
 }
 #text2{
+    margin: 10px;
     position: absolute;
-    top: 27vh;
+    top: 0;
+    bottom: 0;
 }
 
 #box3{
-    position: sticky;
+    position: sticky center;
+    text-align: center;
     width: 73vw;
     height: 175vh;
-    border-radius: 10px;
     background-color: orangered;
+    top: 0px;
+    margin: auto;
+    border-width: 3px;
+    border-style: solid;
+    background-color: orangered;
+    border-color: orange;
 }
 #text3{
     position:sticky;
