--- a/css/ica6-part3.css
+++ b/css/ica6-part3.css
@@ -13,6 +13,25 @@
 
 @media only screen and (max-width:600px) {
     #narrowScreen{
-        background-color: purple;
+        background-color: rgb(186, 139, 186);
+}
+
+@media only screen and (min-width: 800px) {
+    #wideScreen{
+        background-color: rgb(182, 222, 234);
+    }
+}
+
+@media only screen and (max-height: 500px) {
+    #shortScreen{
+        background-color: rgb(244, 244, 111);
+}
+}
+
+
+@media only screen and (min-height: 800px) {
+    #tallScreen{
+        background-color: rgb(235, 136, 49);
+    }
 }
 }
