--- a/css/wa6.css
+++ b/css/wa6.css
@@ -30,6 +30,8 @@ body {
     padding: .5em;
     position: sticky;
     top: 0;
+    overflow: hidden;
+    left: 0px;
   }
   
   nav ul {
@@ -38,6 +40,9 @@ body {
     align-items: center;
     margin: 0;
     padding: 0;
+    flex-wrap: nowrap;
+    list-style: none;
+
   }
   
   nav a {
@@ -52,7 +57,7 @@ body {
     grid-template-rows: 1fr 1fr 1fr;
     list-style: none;
     margin: 0;
-    gap: 2px;
+    gap: 3px;
     padding:0;
     padding-left:20px;
   }
@@ -64,10 +69,26 @@ body {
     padding-bottom: 20px;
   }
 
-  @media only screen and (max-width: 500px) {    
-    nav{
-      font-size: 25px;
-      width: fit-content;
-      height: fit-content;
-      }
+  @media screen and (max-width: 500px) {
+    body {
+      background-color: rgb(235, 243, 84);
     }
+  
+        nav ul {
+          display: block;
+        }
+
+        nav {
+            background-color: pink;
+        }
+  
+        .feature {
+          float: none;
+          margin-right: 10px;
+          
+        }
+  
+        .grid {
+          display: block;
+        }
+}
