--- a/css-midterm/cssMid.css
+++ b/css-midterm/cssMid.css
@@ -54,8 +54,8 @@ main {
 }
 
 .MainPage-content img {
-    width: 1000px; /* Set the width to 400 pixels */
-    height: auto; /* Keep the aspect ratio of the image */
+    max-width: 100%; 
+    height: auto; 
     display: block;
     margin: 0 auto;
 }
@@ -118,7 +118,7 @@ main {
     height: auto;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {}
     header img {
       max-width: 200px;
       margin: 0 10px;
@@ -169,4 +169,36 @@ main {
     }
   
     .photo-grid {
-      grid-template-columns: repeat(
+      grid-template-columns: repeat(4, 1fr);
+    }
+
+    @media only screen and (max-width: 480px) {
+      header {
+        height: auto;
+        padding: 20px;
+        flex-direction: column;
+      }
+      .MainPage-content img {
+        max-width: 100%;
+      }
+      header img {
+        max-width: 200px;
+        margin-bottom: 10px;
+      }
+      
+      nav {
+        margin-top: 20px;
+      }
+      
+      nav ul {
+        flex-direction: column;
+      }
+      
+      nav li {
+        margin: 5px 0;
+      }
+      
+      nav a {
+        font-size: 18px;
+      }
+    }
