--- a/css-midterm/cssMid.css
+++ b/css-midterm/cssMid.css
@@ -118,87 +118,31 @@ main {
     height: auto;
 }
 
-/* @media screen and (max-width: 768px) {}
-    header img {
-      max-width: 200px;
-      margin: 0 10px;
-    }
-  
-    nav {
-      position: fixed;
-      top: 0;
-      left: -100%;
-      width: 100%;
-      height: 100vh;
-      background-color: #e1dcd3;
-      z-index: 999;
-      transition: all 0.3s ease-in-out;
-    }
-  
-    nav ul {
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100%;
-    }
-  
-    nav li {
-      margin: 10px 0;
-    }
-  
-    nav a {
-      font-size: 20px;
-    }
-  
-    nav.active {
-      left: 0;
-    }
-  
-    .about-content img {
-      margin-bottom: 0;
-    }
-  
-    .about-content h2 {
-      font-size: 24px;
-      margin-top: 20px;
-      margin-bottom: 10px;
-    }
-  
-    .about-content p {
-      font-size: 14px;
-    }
-  
-    .photo-grid {
-      grid-template-columns: repeat(4, 1fr);
-    } */
+@media only screen and (max-width: 600px) {}
+  header img {
+    width: 200px;
+  }
+  nav li {
+    margin-left: 10px;
+  }
+  .about-content {
+    flex-direction: column;
+    text-align: center;
+  }
+  .about-content img {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+  .about-content h2 {
+    font-size: 40px;
+  }
+  .about-content p {
+    font-size: 14px;
+  }
 
-    @media only screen and (max-width: 480px) {
-      header {
-        height: auto;
-        padding: 20px;
-        flex-direction: column;
-      }
-      .MainPage-content img {
-        max-width: 100%;
-      }
-      header img {
-        max-width: 200px;
-        margin-bottom: 10px;
-      }
-      
-      nav {
-        margin-top: 20px;
-      }
-      
-      nav ul {
-        flex-direction: column;
-      }
-      
-      nav li {
-        margin: 5px 0;
-      }
-      
-      nav a {
-        font-size: 18px;
-      }
-    }
+  .MainPage-content img {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
