--- a/css-midterm/cssMid.css
+++ b/css-midterm/cssMid.css
@@ -146,3 +146,9 @@ main {
     margin-right: 0;
     margin-bottom: 20px;
   }
+
+  .resume-content img {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 20px;
+}
