--- a/css-midterm/cssMid.css
+++ b/css-midterm/cssMid.css
@@ -65,7 +65,7 @@ main {
 }
 
 .resume-content img {
-    width: 600px; /* Set the width to 400 pixels */
+    width: 400px; /* Set the width to 400 pixels */
     height: auto; /* Keep the aspect ratio of the image */
     display: block;
     margin: 0 auto;
@@ -76,27 +76,30 @@ main {
     justify-content: center;
     align-items: center;
   }
-  
+
+
   .about-content {
     display: flex;
     flex-direction: row;
     align-items: center;
   }
-  
+
   .about-content img {
-    width: 50%;
+    width: 50px;
+    height: auto;
     margin-right: 20px;
   }
-  
+
   .about-content p {
-    width: 50%;
+    padding: 30px;
     font-size: 18px;
     line-height: 1.5;
-    font-family:Helvetica;
-    font-style:normal;
+    font-family: Helvetica;
+    font-style: normal;
     font-weight: lighter;
     color: black;
   }
+
   .about-content h2 {
     font-size: 60px;
     font-style: italic;
@@ -120,7 +123,7 @@ main {
     height: auto;
 }
 
-@media only screen and (max-width: 600px) {}
+@media only screen and (max-width: 400px) }
   header img {
     width: 200px;
   }
