--- a/css-midterm/cssMid.css
+++ b/css-midterm/cssMid.css
@@ -123,13 +123,31 @@ main {
     height: auto;
 }
 
-@media only screen and (max-width: 400px) }
+@media only screen and (max-width: 400px) {
+  header {
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+  }
+
   header img {
-    width: 200px;
+    margin-bottom: 20px;
   }
+
+  nav {
+    margin-top: 20px;
+  }
+
+  nav ul {
+    flex-direction: column;
+  }
+
   nav li {
-    margin-left: 10px;
+    margin-left: 0;
+    margin-bottom: 10px;
+    text-align: center;
   }
+
   .about-content {
     flex-direction: column;
     text-align: center;
