--- a/css/wa11.css
+++ b/css/wa11.css
@@ -13,6 +13,8 @@
   
   img {
     display: block;
+    max-width: 200px;
+    max-height: auto;
     margin: 0 auto;
     margin-bottom: 20px;
   }
