--- a/css/WA13.css
+++ b/css/WA13.css
@@ -20,9 +20,10 @@ h1 {
 
   }
   
+
   .container {
-    background-color: #aca9a9;
-    border: 4px solid #ee4e32;
+    background-color: #faf7f7;
+    border: 4px solid #eef396;
     border-style:ridge;
     padding: 20px;
     max-width: 500px;
@@ -60,5 +61,5 @@ h1 {
     font-weight: bold;
     margin-top: 20px; 
     margin-bottom: 0; 
-    font-size: 10pt;
+    font-size: 12pt;
   }
